Test with floating menu

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,6 +6,6 @@ import './src/styles/global.css'
 
 <Layout>
 	<div class="flex justify-center items-center h-screen">
-		<h1 class="flex font-bold text-9xl">Hola</h1>
+		<h1 class="flex font-bold text-9xl">Acerca de</h1>
 	</div>
 </Layout>
