--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import FloatMenu from "../components/floatMenu.astro"
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -8,15 +12,18 @@
 		<title>Astro Basics</title>
 	</head>
 	<body>
+		<FloatMenu />
 		<slot />
 	</body>
 </html>
 
-<style>
+<style is:global>
 	html,
 	body {
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		background-color: black;
+		color: white;
 	}
 </style>
