--- a/src/components/floatMenu.astro
+++ b/src/components/floatMenu.astro
@@ -1,9 +1,12 @@
 ---
 ---
-<nav class="fixed top-0 right-0 m-4 p-4 bg-white shadow-lg rounded-lg">
-    <ul class="flex space-x-4">
-        <li><a href="/" class="text-gray-700 hover:text-blue-500">Inicio</a></li>
-        <li><a href="\about" class="text-gray-700 hover:text-blue-500">Acerca de</a></li>
-        <li><a href="#" class="text-gray-700 hover:text-blue-500">Contacto</a></li>
-    </ul>
-</nav>
+<div class="flex justify-center h-25">
+    <nav class="inline-flex justify-center m-4 p-4 bg-white shadow-lg rounded-full">
+        <ul class="flex space-x-8 ml-6 mr-6">
+            <li><a href="/" class="text-3xl text-gray-700 hover:text-blue-500">Inicio</a></li>
+            <li><a href="\about" class="text-3xl text-gray-700 hover:text-blue-500">Acerca de</a></li>
+            <li><a href="#" class="text-3xl text-gray-700 hover:text-blue-500">Contacto</a></li>
+            <li><a href="#" class="text-3xl text-gray-700 hover:text-blue-500">Cursos</a></li>
+        </ul>
+    </nav>
+</div>
