--- a/src/components/floatMenu.astro
+++ b/src/components/floatMenu.astro
@@ -5,8 +5,7 @@
         <ul class="flex space-x-8 ml-6 mr-6">
             <li><a href="/" class="text-3xl text-gray-700 hover:text-blue-500">Inicio</a></li>
             <li><a href="\about" class="text-3xl text-gray-700 hover:text-blue-500">Acerca de</a></li>
-            <li><a href="#" class="text-3xl text-gray-700 hover:text-blue-500">Contacto</a></li>
-            <li><a href="#" class="text-3xl text-gray-700 hover:text-blue-500">Cursos</a></li>
+            <li><a href="/clients" class="text-3xl text-gray-700 hover:text-blue-500">Clientes</a></li>
         </ul>
     </nav>
 </div>
