--- a/src/pages/clients/add.astro
+++ b/src/pages/clients/add.astro
@@ -1,75 +1,33 @@
 ---
-// Importaciones
 import Layout from '../../layouts/Layout.astro';
+import ClientForm from '../../components/clients/ClientForm.astro';
 import './src/styles/global.css';
+import { turso } from '../../turso';
+
+if (Astro.request.method === 'POST')
+{
+  const formData = await Astro.request.formData();
+
+  const id_Cliente = formData.get('id_Cliente');
+  const nombre_Cliente = formData.get('nombre_Cliente');
+  const apellido_Cliente = formData.get('apellido_Cliente');
+  const telefono = formData.get('telefono');
+  const correo = formData.get('correo');
+
+  await turso.execute(`
+        INSERT INTO Clientes 
+        (nombre_Cliente, apellido_Cliente, telefono, correo)
+        VALUES (${id_Cliente}, '${nombre_Cliente}', '${apellido_Cliente}', '${telefono}', ${correo})
+    `);
+  
+    return Astro.redirect('/clients');
+}
 ---
 
 <Layout>
   <div class="flex flex-col justify-center items-center ">
     <h1 class="font-bold text-4xl mb-8">Agregar Nuevo Cliente</h1>
-
-    <form action="/api/add-client" method="POST" class="w-full max-w-2xl bg-white shadow-md rounded-lg p-6">
-      <div class="mb-4">
-        <label for="nombre" class="block text-gray-700 font-semibold mb-2">Nombre:</label>
-        <input
-          type="text"
-          id="nombre"
-          name="nombre"
-          required
-          class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 text-black"
-        />
-      </div>
-
-      <div class="mb-4">
-        <label for="apellido_paterno" class="block text-gray-700 font-semibold mb-2">Apellido Paterno:</label>
-        <input
-          type="text"
-          id="apellido_paterno"
-          name="apellido_paterno"
-          required
-          class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 text-black"
-        />
-      </div>
-
-      <div class="mb-4">
-        <label for="apellido_materno" class="block text-gray-700 font-semibold mb-2">Apellido Materno:</label>
-        <input
-          type="text"
-          id="apellido_materno"
-          name="apellido_materno"
-          required
-          class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 text-black"
-        />
-      </div>
-
-      <div class="mb-4">
-        <label for="correo" class="block text-gray-700 font-semibold mb-2">Correo:</label>
-        <input
-          type="email"
-          id="correo"
-          name="correo"
-          required
-          class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 text-black"
-        />
-      </div>
-
-      <div class="mb-4">
-        <label for="telefono" class="block text-gray-700 font-semibold mb-2">Teléfono:</label>
-        <input
-          type="tel"
-          id="telefono"
-          name="telefono"
-          required
-          class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 text-black"
-        />
-      </div>
-
-      <button
-        type="submit"
-        class="w-full bg-blue-500 text-white font-semibold py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500"
-      >
-        Agregar Cliente
-      </button>
-    </form>
+    <ClientForm>
+    </ClientForm>
   </div>
 </Layout>
