--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import FloatMenu from "../components/floatMenu.astro"
+import SideBar from "../components/sideBar.astro"
 ---
 
 <!doctype html>
@@ -12,7 +12,7 @@ import FloatMenu from "../components/floatMenu.astro"
 		<title>Astro Basics</title>
 	</head>
 	<body>
-		<FloatMenu />
+		<SideBar />	
 		<slot />
 	</body>
 </html>
@@ -23,7 +23,5 @@ import FloatMenu from "../components/floatMenu.astro"
 		margin: 0;
 		width: 100%;
 		height: 100%;
-		background-color: black;
-		color: white;
 	}
 </style>
