--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import SideBar from '../components/sideBar.astro';
 import './src/styles/global.css' 
 
 ---
