--- a/src/components/sideBar.astro
+++ b/src/components/sideBar.astro
@@ -126,7 +126,7 @@ aria-label="Main Sidebar Navigation"
         >
       </a>
       <a
-        href="javascript:void(0)"
+        href="/clients"
         class="group flex items-center gap-2 border-y border-transparent px-5 py-1 font-medium hover:border-neutral-600 hover:bg-amber-100 active:bg-amber-50"
       >
         <span
@@ -155,7 +155,7 @@ aria-label="Main Sidebar Navigation"
         >
       </a>
       <a
-        href="javascript:void(0)"
+        href="#"
         class="group flex items-center gap-2 border-y border-transparent px-5 py-1 font-medium hover:border-neutral-600 hover:bg-amber-100 active:bg-amber-50"
       >
         <span
