--- a/src/components/clients/ClientForm.astro
+++ b/src/components/clients/ClientForm.astro
@@ -1,5 +1,32 @@
 ---
+import { convertClientsDataToJSON } from "../../functions/ConvertClientsDataToJSON";
+import { turso } from "../../turso";
 
+const path = Astro.url.pathname.replace(/\/$/, ""); // Elimina el "/" al final si existe.
+const previousPath = path.substring(0, path.lastIndexOf("/")) || "/";
+
+interface Props {
+  selectedClient?: any;
+}
+
+const {selectedClient} = Astro.props;
+
+let id_Cliente = "";
+let clientData;
+let result;
+
+clientData = await turso.execute("SELECT * FROM Clientes")
+
+const data = clientData.toJSON()
+
+if (!selectedClient) {
+  result = convertClientsDataToJSON(data)
+}
+else  {
+  result = convertClientsDataToJSON(data).filter((p) => p.id_Cliente !== selectedClient.supplierID); 
+}
+
+console.log(result);
 ---
 <form action="/api/add-client" method="POST" class="w-full max-w-2xl bg-white shadow-md rounded-lg p-6">
     <div class="mb-4">
@@ -19,17 +46,6 @@
         type="text"
         id="apellido_paterno"
         name="apellido_paterno"
-        required
-        class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 text-black"
-      />
-    </div>
-
-    <div class="mb-4">
-      <label for="apellido_materno" class="block text-gray-700 font-semibold mb-2">Apellido Materno:</label>
-      <input
-        type="text"
-        id="apellido_materno"
-        name="apellido_materno"
         required
         class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 text-black"
       />
