--- a/src/pages/clients/add.astro
+++ b/src/pages/clients/add.astro
@@ -27,7 +27,6 @@ if (Astro.request.method === 'POST')
 <Layout>
   <div class="flex flex-col justify-center items-center ">
     <h1 class="font-bold text-4xl mb-8">Agregar Nuevo Cliente</h1>
-    <ClientForm>
-    </ClientForm>
+    <ClientForm></ClientForm>
   </div>
 </Layout>
