--- a/src/components/ui/tables/clientsTable.astro
+++ b/src/components/ui/tables/clientsTable.astro
@@ -1,5 +1,5 @@
   ---
-  import { turso } from "../../turso";
+  import { turso } from "../../../turso";
 
   // Obtener los datos de la base de datos
   const { rows } = await turso.execute('SELECT * FROM Clientes');
