--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import SideBar from "../components/sideBar.astro"
+import SideBar from "../components/ui/sidebar/sideBar.astro"
 ---
 
 <!doctype html>
@@ -12,7 +12,7 @@ import SideBar from "../components/sideBar.astro"
 		<title>Astro Basics</title>
 	</head>
 	<body>
-		<SideBar />	
+		<SideBar />	s
 		<slot />
 	</body>
 </html>
