--- a/src/pages/clients/add.astro
+++ b/src/pages/clients/add.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../../layouts/Layout.astro';
 import ClientForm from '../../components/clients/ClientForm.astro';
+import SubmitBtn from '../../components/ui/Buttons/SubmitBtn.astro';
 import './src/styles/global.css';
 import { turso } from '../../turso';
 
@@ -28,5 +29,6 @@ if (Astro.request.method === 'POST')
   <div class="flex flex-col justify-center items-center ">
     <h1 class="font-bold text-4xl mb-8">Agregar Nuevo Cliente</h1>
     <ClientForm></ClientForm>
+    <SubmitBtn title="Agregar"></SubmitBtn>
   </div>
 </Layout>
