--- a/src/components/ui/Forms/Form.astro
+++ b/src/components/ui/Forms/Form.astro
@@ -3,10 +3,16 @@ interface Props {
   title: string;
 }
 
-
 const { title } = Astro.props;
 ---
 
-<form class="max-w-full mx-auto p-4 grid grid-cols-2 md:grid-cols-1 gap-2 backdrop-blur-sm" method="post">
+<form 
+  class="max-w-full mx-auto p-8 grid grid-cols-2 md:grid-cols-1 gap-4 
+         border-4 border-blue-200 rounded-2xl shadow-xl
+         hover:shadow-2xl transition-all duration-300
+         dark:border-blue-800/30 dark:shadow-xl dark:hover:border-blue-600
+         backdrop-blur-sm hover:scale-[1.005]"
+  method="post"
+>
   <slot/>
 </form>
