--- a/src/components/ui/Forms/FormInput.astro
+++ b/src/components/ui/Forms/FormInput.astro
@@ -18,7 +18,7 @@ const { title, type, placeholder, isRequired, name, value, isDisabled } =
 <div class="flex-1 mb-4">
   <label
     for={name}
-    class="block text-sm font-medium mb-1 capitalize"
+    class="block text-base font-bold mb-2 capitalize text-black-800 "
   >
     {title ? title : <slot />}
     {isRequired && <span class="text-red-500"> *</span>}
@@ -34,11 +34,13 @@ const { title, type, placeholder, isRequired, name, value, isDisabled } =
     aria-describedby="helper-text-explanation"
     appearance-none
     step="any"
-    class={`w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 
-      focus:ring-LegacyBlue-600 focus:border-LegacyBlue-600 dark:border-2 dark:border-gray-700 
-      dark:text-white flex-1 min-w-[200px] 
-      [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none
-        ${isDisabled ? "dark:bg-gray-700/70" : "dark:bg-gray-700/20"}
+    class={`w-full p-2.5 border-2 border-gray-400 rounded-lg shadow-sm hover:border-gray-500
+      focus:outline-none focus:ring-4 focus:ring-blue-200 focus:border-blue-600 
+      transition-all duration-200 placeholder-gray-400
+      dark:border-2 dark:border-gray-600 dark:text-white dark:focus:ring-blue-800/40
+      dark:focus:border-blue-600 dark:placeholder-gray-500 bg-white
+      ${isDisabled ? "dark:bg-gray-700/30 cursor-not-allowed" : "dark:bg-gray-800/30"}
+      [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none
       `}
   />
 </div>
