--- a/src/pages/clients/add.astro
+++ b/src/pages/clients/add.astro
@@ -1,34 +1,36 @@
 ---
-import Layout from '../../layouts/Layout.astro';
-import ClientForm from '../../components/clients/ClientForm.astro';
-import SubmitBtn from '../../components/ui/Buttons/SubmitBtn.astro';
-import './src/styles/global.css';
-import { turso } from '../../turso';
+export const prerender = false;
+import Layout from "../../layouts/Layout.astro";
+import ClientForm from "../../components/clients/ClientForm.astro";
+import SubmitBtn from "../../components/ui/Buttons/SubmitBtn.astro";
+import "./src/styles/global.css";
+import { turso } from "../../turso";
 
-if (Astro.request.method === 'POST')
-{
+const { rows } = await turso.execute("SELECT * FROM Clientes");
+const id_Cliente = rows.length + 1;
+
+if (Astro.request.method === "POST") {
   const formData = await Astro.request.formData();
 
-  const id_Cliente = formData.get('id_Cliente');
-  const nombre_Cliente = formData.get('nombre_Cliente');
-  const apellido_Cliente = formData.get('apellido_Cliente');
-  const telefono = formData.get('telefono');
-  const correo = formData.get('correo');
+  const nombre_Cliente = formData.get("nombre_Cliente");
+  const apellido_Cliente = formData.get("apellido_Cliente");
+  const telefono = formData.get("telefono");
+  const correo = formData.get("correo");
 
-  await turso.execute(`
-        INSERT INTO Clientes 
-        (nombre_Cliente, apellido_Cliente, telefono, correo)
-        VALUES (${id_Cliente}, '${nombre_Cliente}', '${apellido_Cliente}', '${telefono}', ${correo})
-    `);
-  
-    return Astro.redirect('/clients');
+  await turso.execute(
+    `
+      INSERT INTO Clientes(id_Cliente, nombre_Cliente, apellido_Cliente, telefono, correo) VALUES (${id_Cliente}, '${nombre_Cliente}', '${apellido_Cliente}', '${telefono}', '${correo}')
+    `
+  );
+
+  return Astro.redirect("/clients");
 }
 ---
 
 <Layout>
-  <div class="flex flex-col justify-center items-center ">
+  <div class="flex flex-col justify-center items-center">
     <h1 class="font-bold text-4xl mb-8">Agregar Nuevo Cliente</h1>
-    <ClientForm></ClientForm>
-    <SubmitBtn title="Agregar"></SubmitBtn>
+    <ClientForm />
+    <SubmitBtn title="Agregar" />
   </div>
 </Layout>
